--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ MYSQL_PASSWORD = password
 MYSQL_HOST = localhost
 MYSQL_PORT = 3306
 MYSQL_URL = jdbc:mysql://localhost:3306/cake_shop_system
+
+GMAIL_ACCOUNT = kh622962@gmail.com
+APP_PASSWORD = wgqchvkrhcmstxfh
