Change app password

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ MYSQL_PORT = 3306
 MYSQL_URL = jdbc:mysql://localhost:3306/cake_shop_system
 
 GMAIL_ACCOUNT = kh622962@gmail.com
-APP_PASSWORD = wgqchvkrhcmstxfh
+APP_PASSWORD = brqxknqkmcbckktv
